--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.databinding.basicsample">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.example.android.databinding.basicsample">
 
     <application
         android:allowBackup="true"
@@ -24,7 +25,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".ui.PlainOldActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
