Reverts CI to push on any branches

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -1,13 +1,7 @@
 name: CI
 
 # push will execute any commits that are pushed to any branch
-# on: [push]
-
-# Alternatively, choose a branch
-on:
-  push:
-    branches:
-      - solution
+on: [push]
 
 jobs:
 
