Looking for build time regression. Removes max workers

--- a/.github/ci-gradle.properties
+++ b/.github/ci-gradle.properties
@@ -23,9 +23,8 @@ kotlin.incremental=false
 # Enable parallel execution
 org.gradle.parallel=true
 
-# Limit memory usage and number of workers.
+# Limit memory usage.
 org.gradle.jvmargs=-Xmx5120m
-org.gradle.workers.max=2
 
 # Use a single process to limit memory usage effectively.
 kotlin.compiler.execution.strategy=in-process
