Looking for build time regression. Removes in process strategy

--- a/.github/ci-gradle.properties
+++ b/.github/ci-gradle.properties
@@ -27,4 +27,4 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx5120m
 
 # Use a single process to limit memory usage effectively.
-kotlin.compiler.execution.strategy=in-process
+#kotlin.compiler.execution.strategy=in-process
