Disables all gradle properties

--- a/.github/ci-gradle.properties
+++ b/.github/ci-gradle.properties
@@ -15,16 +15,16 @@
 #
 
 # Daemon is slower in CI.
-org.gradle.daemon=false
+#org.gradle.daemon=false
 
 # Incremental builds are slower in CI.
-kotlin.incremental=false
+#kotlin.incremental=false
 
 # Enable parallel execution
-org.gradle.parallel=true
+#org.gradle.parallel=true
 
 # Limit memory usage.
-org.gradle.jvmargs=-Xmx5120m
+#org.gradle.jvmargs=-Xmx5120m
 
 # Use a single process to limit memory usage effectively.
 #kotlin.compiler.execution.strategy=in-process
