Reenable gradle properties, no regressions

--- a/.github/ci-gradle.properties
+++ b/.github/ci-gradle.properties
@@ -14,17 +14,20 @@
 # limitations under the License.
 #
 
+# These properties are defined to reduce build time or increase build stability.
+
 # Daemon is slower in CI.
-#org.gradle.daemon=false
+org.gradle.daemon=false
 
 # Incremental builds are slower in CI.
-#kotlin.incremental=false
+kotlin.incremental=false
 
 # Enable parallel execution
-#org.gradle.parallel=true
+org.gradle.parallel=true
 
-# Limit memory usage.
-#org.gradle.jvmargs=-Xmx5120m
+# Limit memory usage and number of workers.
+org.gradle.jvmargs=-Xmx5120m
+org.gradle.workers.max=2
 
 # Use a single process to limit memory usage effectively.
-#kotlin.compiler.execution.strategy=in-process
+kotlin.compiler.execution.strategy=in-process
