--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 *.iml
-.idea
 .gradle
 /local.properties
+/.idea
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
-build/
+/build
 /captures
 .externalNativeBuild
+.cxx
