--- a/build.gradle
+++ b/build.gradle
@@ -15,46 +15,38 @@
  */
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.30'
+    ext.kotlin_version = '1.6.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
     ext {
         // SDK and tools
-        compileSdkVersion = 28
+        compileSdkVersion = 31
         minSdkVersion = 21
-        targetSdkVersion = 28
+        targetSdkVersion = 31
 
         // App dependencies
-        androidXTestVersion = '1.1.1'
-        constraintLayoutVersion = '1.1.3'
-        espressoVersion = '3.1.0-alpha4'
+        androidXTestVersion = '1.4.0'
+        constraintLayoutVersion = '2.1.2'
+        espressoVersion = '3.5.0-alpha03'
         gradleVersion = '3.3.1'
-        junitVersion = '4.12'
+        junitVersion = '4.13.2'
         hamcrestVersion = '1.3'
-        kotlinVersion = '1.3.21'
-        runnerExtVersion = '1.1.0'
+        kotlinVersion = '1.7.0'
+        runnerExtVersion = '1.1.3'
         rulesVersion = '1.0.1'
-        appCompatVersion = '1.0.2'
+        appCompatVersion = '1.4.0'
         supportLibraryVersion = '1.0.2'
-        archLifecycleVersion = '2.1.0-alpha04'
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
+        archLifecycleVersion = '2.2.0'
     }
 }
 
